# ARO

./: .gitignore  .pre-commit-config.yaml  README.md  data_utils.py  metab_mapping.txt  omics_bert.ipynb  omics_bert_alt_training.ipynb  pyproject.toml  sweep.yaml  test_bert.ipynb  train_notebook.ipynb
configs/: raw_attention.yaml  raw_linear.yaml  vae_linear.yaml
notebooks/: lightning_train.py  lightning_train_linear.py  plots_nb.py  test_model.py  train_notebook.py
src/: analysis.py  autoencoder_modules.py  masked_modules.py  models.py  omic_dataclass.py  output_analysis.py  saliency_analysis.py  train_script.py
