[project]
name = "omic-bert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastexcel>=0.19.0",
    "gprofiler-official>=1.0.0",
    "iprogress>=0.4",
    "jupyter>=1.1.1",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.39.3",
    "python-calamine>=0.6.2",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "wandb>=0.26.0",
    "umap-learn[plot]>=0.5.12",
    "ruff>=0.15.11",
    "einops",
    "hydra-core>=1.3.2",
    "seaborn",
    "pyarrow>=24.0.0",
    "shap>=0.49.1",
    "pre-commit>=4.6.0",
]

[project.optional-dependencies]
cuda = [
    "flash-attn-4[cu13]",
]
analysis = [
    "captum>=0.9.0",
    "gseapy>=1.2.1",
    "mofapy2>=0.7.4",
    "mygene>=3.2.2",
]

[tool.ruff]
exclude = ["notebooks", "examples", "*.ipynb"]
